zmieniono:       main.py 	zmieniono:       templates/formularz.html 	zmieniono:       templates/wynik.html

--- a/templates/formularz.html
+++ b/templates/formularz.html
@@ -132,14 +132,14 @@ list-style-type:none;
 <form class="formularz" id="form2" action="form_simplified" method="post">
 			<br/><br/>
 			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>
-			Wiek:</p></div> <input class="pola_formularza" id="f1_wiek"type="number" min="1" name="wiek"/><br/><br/><hr><br/>
+			Wiek:</p></div> <input class="pola_formularza" id="f2_wiek"type="number" min="1" name="wiek"/><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Płeć: </p></div> <select class="pola_formularza" id="f1_plec" name="plec">
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Płeć: </p></div> <select class="pola_formularza" id="f2_plec" name="plec">
 				<option value="0">Mężczyzna</option>
 				<option value="1">Kobieta</option>
 			</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Typ bólu klatki piersiowej: </p></div> <select class="pola_formularza" id="f1_bol" name="bol"><br/><br/><hr><br/>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Typ bólu klatki piersiowej: </p></div> <select class="pola_formularza" id="f2_bol" name="bol"><br/><br/><hr><br/>
 				<option value="0">Brak</option>
 				<option value="1">1</option>
 				<option value="2">2</option>
@@ -147,20 +147,36 @@ list-style-type:none;
 				<option value="4">4</option>
 				</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Ból klatki w trakcie wysiłku </p></div><select class="pola_formularza" id="f1_bolw" name="bolw">
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Ból klatki w trakcie wysiłku </p></div><select class="pola_formularza" id="f2_bolw" name="bolw">
 				<option value="2">Nie</option>
 				<option value="1">Tak</option>
 				</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Maksymalne tempo bicia serca w trakcie wysiłku [bpm]</p> </div><input class="pola_formularza" id="f1_bicieserca" type="number" min="1" name="bicieserca" /><br/><br/><hr><br/>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Maksymalne tempo bicia serca w trakcie wysiłku [bpm]</p> </div><select class="pola_formularza"  id="f2_bicieserca" name="bicieserca">
+					<option value="130">Obniżone ~130</option>
+					<option value="160">W normie ~160</option>
+					<option value="190">Podwyższone ~190</option>
+				</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Ciśnienie spoczynkowe - skurczowe [mmHg] </p></div><input class="pola_formularza" id="f1_cisnienie"type="number" min="0" name="cisnienie" /><br/><br/><hr><br/>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Ciśnienie spoczynkowe - skurczowe [mmHg] </p></div><select  class="pola_formularza" id="f2_cisnienie" name="cisnienie">
+					<option value="95">Niskie ~90</option>
+					<option value="105">Obniżone ~105</option>
+					<option value="120">W normie ~120</option>
+					<option value="140">Podwyższone ~140</option>
+					<option value="160">Wysokie ~160</option>
+					</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Poziom cholesterolu całkowitego [mg/dl]</p> </div><input class="pola_formularza" id="f1_cholesterol" type="number" min="0" name="cholesterol" /><br/><br/><hr><br/>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Poziom cholesterolu całkowitego [mg/dl]</p> </div><select class="pola_formularza"  id="f2_cholesterol" name="cholesterol">
+					<option value="120">Niski ~120</option>
+					<option value="135">Obniżony ~135</option>
+					<option value="155">W normie ~155</option>
+					<option value="200">Podwyższony ~200</option>
+					<option value="300">Wysoki ~300</option>
+					</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Poziom cukru we krwi na czczo:</p> </div><select class="pola_formularza" id="f1_cukier"name="cukier">
-				<option value="1">Powyżej 120md/dl</option>
-				<option value="2">Poniżej 120md/dl</option>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Tooltip text</span></div>Poziom cukru we krwi na czczo:</p> </div><select class="pola_formularza"  id="f2_cukier"name="cukier">
+				<option value="2">Obniżony &lt;120mg/dl</option>
+				<option value="1">Podwyższony&gt;120mg/dl</option>
 				</select><br/><br/><hr><br/>
 			
 			
@@ -206,7 +222,7 @@ list-style-type:none;
 					<option value="160">Wysokie</option>
 					</select><br/>
 			<br/><br/><hr><br/>
-			<div class="atr">Poziom cholesterolu całkowitego [mg/dl]</div><select class="pola_formularza"  id="f2_bicieserca" name="cholesterol">
+			<div class="atr">Poziom cholesterolu całkowitego [mg/dl]</div><select class="pola_formularza"  id="f2_cholesterol" name="cholesterol">
 					<option value="120">Niski</option>
 					<option value="135">Obniżony</option>
 					<option value="155">W normie</option>
