--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,12 @@ list-style-type:none;
       <a href="#"><li>O nas</li></a>
       {% if session['login'] %}
 	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
-	  <a href="/wyloguj" id="wylogujsie_przycisk"><li id="wylog">Wyloguj się</li></a>
+	  <a href="/wyloguj" id="profil_przycisk"><li id="wylog">Profil</li></a>
+	  
+	  <a href="/wylo3guj" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
+	   
+	  <a href="/wyloguj"id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
+	   
 	  </ul>	</li></a>  
 
 	  {% else %}
@@ -53,7 +58,7 @@ list-style-type:none;
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 
-<div class="footer">mikronapedy</div>
+<div class="footer">© Copyright by Adrian Hałys &amp Arkadiusz Hanejko</div>
 {% endblock %}
 </body>
 </html>
