zmieniono:       main.py 	zmieniono:       templates/wynik.html

--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -58,7 +58,7 @@ list-style-type:none;
 		<table class="tabela_wynikow" id="tw1">
 			{{table|safe}}
 		</table>
-		{% if wynik !="Brak" %}
+		{% if wynik !="Nie okkreślono" %}
 		{% else	%}
 
 			<p class="wyniki" style="color:tomato;">Niektóre z podanych danych są niestandardowe i nie znajdują odzwierciedlenia w danych testowych, co uniemożliwia otrzymanie rzetelnego wyniku. W przypadku rzeczywistego występowania takich wartości warto się bezzwłocznie skontaktować z lekarzem specjalistą.</p>
