zmieniono:       templates/index.html 	zmieniono:       templates/wyniki_uzytkownika.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,11 +39,11 @@ list-style-type:none;
       <a href="#"><li>O nas</li></a>
       {% if session['login'] %}
 	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
-	  <a href="/wyloguj" id="profil_przycisk"><li id="wylog">Profil</li></a>
+	  <a href="/profil" id="profil_przycisk"><li id="wylog">Profil</li></a>
 	  
-	  <a href="/wylo3guj" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
+	  <a href="/wyniki" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
 	   
-	  <a href="/wyloguj"id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
+	  <a href="/wyloguj" id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
 	   
 	  </ul>	</li></a>  
 
