--- a/templates/wyniki_uzytkownika.html
+++ b/templates/wyniki_uzytkownika.html
@@ -71,7 +71,7 @@ list-style-type:none;
 				<div id="contentw_{{i}}">
 					<p id="wynikitext" style="font-weight:bold;color:#cdcdcd;padding-bottom:20px;">{{wyniki[i][2]}}  {{wyniki[i][5]}}</p>
 					<table class="tabela_wynikow">{{wyniki[i][4]|safe}}</table>
-					<p class="r" style="text-align:center; padding:10px;" >{{wyniki[i][3]}}</p><p style="text-align:center;"><button type="submit" style="padding:5px 10px 5px 10px ;border-radius:5px;background-color:tomato;cursor:pointer;" name="delete" value="{{wyniki[i][0]}}">Usuń</button></p>
+					<p class="r" style="text-align:center; padding:10px;" >{{wyniki[i][3]}}</p><p style="text-align:center;"><button type="submit" style="padding:5px 10px 5px 10px ;border-radius:5px;background-color:tomato;cursor:pointer; border:none;" name="delete" value="{{wyniki[i][0]}}">Usuń</button></p>
 					
 				</div>
 			{% endfor %}
